--- a/assets/css/mytheme.css
+++ b/assets/css/mytheme.css
@@ -1,3 +1,8 @@
 .sidebar-wrapper{
     width:280px !important;
+    left: 0 !important;
+}
+.main-wrapper{
+    padding-left: 300px !important;
+    padding-right: 60px !important;
 }
