--- a/assets/css/mytheme.css
+++ b/assets/css/mytheme.css
@@ -1,6 +1,6 @@
 .sidebar-wrapper{
-    /*width:280px !important;
-    left: 0 !important;*/
+    width:280px !important;
+    /*left: 0 !important;*/
 }
 .main-wrapper{
     /*padding-left: 300px !important;
